--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -15,8 +15,8 @@
             <button id="startButton" class="btn btn-success" style='margin-left:0px; width:100px;' type="button" > Start </button>
         </div>
 
-        <div style='width:200px; height:170px; float:left'>
-            <img src='{% static "surveys/OculusRift.jpg" %}' style='width:100%; height:auto; margin-top:150px'/>
+        <div style='width:200px; height:170px; float:left; margin-right: 10px;'>
+            <img src='{% static "surveys/Destiny.jpg" %}' style='width:100%; height:auto; margin-top:200px; border: 2px solid black; border-radius: 5px;'/>
         </div>
 
         <div id='newGameDiv' style='display:none;'>
@@ -292,7 +292,7 @@
                     $("<dd><div id='fearbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][3]) + "%'> &nbsp </div></dd>").appendTo("#" + nameList[i] + "Chart");
 
                 }
-                $('#chat_' + nameList[0]).text('Can I get an Oculus Rift please?')
+                $('#chat_' + nameList[0]).text('Can I get a copy of Destiny?')
                 $('#chat_' + nameList[0]).addClass("callout");
                 if(npcCount == 0){
                     setUpEndGame();                  
@@ -348,7 +348,7 @@
                     } 
 
                     if (gameStatus == 'final'){
-                        $('#chat_' + nameList[0]).text('Can I get an Oculus Rift please?');
+                        $('#chat_' + nameList[0]).text('Can I get a copy of Destiny?');
                         $('#chat_' + nameList[0]).addClass("callout");
                     } else {
                             $('#chat_' + nameList[i]).text('')
